# framework_compare

./: .dockerignore  .gitignore  Makefile  README.md  benchmark.sh  framework_compare.sln
docker/: dotnet.Dockerfile  go.Dockerfile  java.Dockerfile  node.Dockerfile  rust.Dockerfile
dotnet/PgStore/: Models.cs  PgStore.cs  PgStore.csproj
dotnet/aot/: Program.cs  aot.csproj
dotnet/carter/: Program.cs  carter.csproj
dotnet/controller-api/: Helpers.cs  Models.cs  OrderStore.cs  OrdersController.cs  Program.cs  controller-api.csproj
dotnet/fast-endpoints/: Program.cs  fast-endpoints.csproj
dotnet/minimal-api/: Program.cs  minimal-api.csproj
go/aarv/: go.mod  go.sum  main.go
go/aarv-segmentio/: go.mod  go.sum  main.go
go/chi/: go.mod  go.sum  main.go
go/echo/: go.mod  go.sum  main.go
go/fiber/: go.mod  go.sum  main.go
go/gin/: go.mod  go.sum  main.go
go/mach/: go.mod  go.sum  main.go
go/nethttp/: go.mod  main.go
go/pgstore/: go.mod  pgstore  store.go
java/helidon/: pom.xml
java/javalin/: pom.xml
java/micronaut/: pom.xml
java/pgstore/: pom.xml
java/quarkus/: pom.xml
java/spring-webflux/: pom.xml
java/spring-webmvc/: pom.xml
java/vertx/: pom.xml
lua/: wrk_bulk_post.lua  wrk_delete.lua  wrk_post.lua  wrk_profile_put.lua  wrk_put.lua
node/express/: main.js  package.json
node/fastify/: main.js  package.json
node/pgstore/: index.js  package.json
rust/actix-web/: Cargo.toml
rust/axum/: Cargo.toml
rust/axum/src/: main.rs
rust/poem/: Cargo.toml
rust/poem/src/: main.rs
rust/warp/: Cargo.toml
rust/warp/src/: main.rs
(+82 files in other folders)
