[package]
name = "benchmark-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
