[package]
name = "benchmark-poem"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "3", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
pgstore = { path = "../pgstore" }
